@@ -26,7 +26,7 @@ import com.graphhopper.routing.ev.MaxSpeed;
 import com.graphhopper.routing.ev.RoadAccess;
 import com.graphhopper.routing.ev.RoadClass;
 import com.graphhopper.routing.util.spatialrules.AbstractSpatialRule;
-import com.graphhopper.routing.util.spatialrules.TransportationMode;
+import com.graphhopper.routing.util.TransportationMode;
 
 /**
  * Defines the default rules for German roads
@@ -47,7 +47,7 @@ public class GermanySpatialRule extends AbstractSpatialRule {
      */
     @Override
     public double getMaxSpeed(RoadClass roadClass, TransportationMode transport, double currentMaxSpeed) {
-        if (!Double.isNaN(currentMaxSpeed) || transport != TransportationMode.MOTOR_VEHICLE) {
+        if (!Double.isNaN(currentMaxSpeed) || !transport.isMotorVehicle()) {
             return currentMaxSpeed;
         }
         
@@ -79,7 +79,7 @@ public class GermanySpatialRule extends AbstractSpatialRule {
             return currentRoadAccess;
         }
         
-        if (transport != TransportationMode.MOTOR_VEHICLE) {
+        if (!transport.isMotorVehicle()) {
             return RoadAccess.YES;
         }
 
